--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                         <option value="boys" selected>Boys</option>
                         <option value="feat" selected>Feat</option>
                         <option value="netflix" selected>Netflix</option>
+                        <option value="lays" selected>Lays</option>
                     </select>
                 </td>
             </tr>
