--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
                         <option value="boys" selected>Boys</option>
                         <option value="feat" selected>Feat</option>
                         <option value="netflix" selected>Netflix</option>
-                        <option value="lays" selected>Lays</option>
+                        <option value="lays" selected>Lays (28 default)</option>
+                        <option value="lays-32" selected>Lays (32 low)</option>
                     </select>
                 </td>
             </tr>
