--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <tr>
                 <td class="title" colspan=3>
                     <select id="fileSel" style="font-size: 1.1em; margin-bottom: 1em;" multiple="multiple">
+                        <option value="1" selected>1</option>
                         <option value="test" selected>Girl</option>
                         <option value="test2" selected>Oasis</option>
                         <option value="test3" selected>Temple</option>
