--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                 <td class="title" colspan=3>
                     <select id="fileSel" style="font-size: 1.1em; margin-bottom: 1em;" multiple="multiple">
                         <option value="1" selected>1</option>
+                        <option value="2" selected>2</option>
+                        <option value="3" selected>3</option>
+                        <option value="4" selected>4</option>
                         <option value="test" selected>Girl</option>
                         <option value="test2" selected>Oasis</option>
                         <option value="test3" selected>Temple</option>
